@@ -2,11 +2,11 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Charts Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.charts;singleton:=true
-Bundle-Version: 1.2.0
+Bundle-Version: 1.2.3
 Bundle-Activator: org.netxms.ui.eclipse.charts.Activator
 Bundle-Vendor: netxms.org
-Require-Bundle: org.netxms.webui.core;bundle-version="1.2.0",
- org.eclipse.rap.ui;bundle-version="1.4.1",
+Require-Bundle: org.netxms.webui.core;bundle-version="1.2.3",
+ org.eclipse.rap.ui;bundle-version="1.5.0",
  org.eclipse.birt.chart;bundle-version="2.6.1",
  org.eclipse.birt.chart.engine;bundle-version="2.6.2",
  org.eclipse.birt.chart.device.extension;bundle-version="2.6.2",
