@@ -2,12 +2,13 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Topology Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.topology;singleton:=true
-Bundle-Version: 1.1.10
+Bundle-Version: 1.2.3
 Bundle-Activator: org.netxms.ui.eclipse.topology.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.core.runtime,
- org.netxms.ui.eclipse.objectview;bundle-version="1.1.9",
+ org.netxms.ui.eclipse.objectview;bundle-version="1.2.3",
  org.eclipse.rap.ui;bundle-version="1.5.0",
- org.netxms.webui.core;bundle-version="1.1.10"
+ org.netxms.webui.core;bundle-version="1.2.3",
+ org.netxms.ui.eclipse.objectbrowser;bundle-version="1.2.3"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
